--- a/Nuages.Identity.UI/Pages/_ViewImports.cshtml
+++ b/Nuages.Identity.UI/Pages/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using Nuages.Identity.UI
+@using Microsoft.Extensions.Options
+
 @namespace Nuages.Identity.UI.Pages
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebOptimizer.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
