--- a/Nuages.Identity.UI/Pages/Account/Register.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Register.cshtml
@@ -1,26 +1,64 @@
-@page
-@model Nuages.Identity.UI.Pages.Account.Register
+﻿@page
+@model RegisterModel
+@{
+    ViewData["Title"] = "Register";
+}
 
+<h1>@ViewData["Title"]</h1>
 
-
-<!-- This example requires Tailwind CSS v2.0+ -->
-<div class="bg-gray-50">
-  <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
-    <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-      <span class="block">Ready to dive in?</span>
-      <span class="block text-indigo-600">Start your free trial today.</span>
-    </h2>
-    <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
-      <div class="inline-flex rounded-md shadow">
-        <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
-          Get started
-        </a>
-      </div>
-      <div class="ml-3 inline-flex rounded-md shadow">
-        <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50">
-          Learn more
-        </a>
-      </div>
+<div >
+    <div >
+        <form id="registerForm"  method="post">
+            <h2>Create a new account.</h2>
+            <hr />
+           
+            <div >
+                <input asp-for="Input.Email"autocomplete="username" />
+             
+            </div>
+            <div >
+                <input asp-for="Input.Password"  autocomplete="new-password" />
+                
+            </div>
+            <div >
+                <input asp-for="Input.ConfirmPassword"  />
+                
+            </div>
+            <button id="registerSubmit" type="submit">Register</button>
+        </form>
     </div>
-  </div>
+    @* <div class="col-md-6 col-md-offset-2"> *@
+    @*     <section> *@
+    @*         <h3>Use another service to register.</h3> *@
+    @*         <hr /> *@
+    @*         @{ *@
+    @*             if ((Model.ExternalLogins?.Count ?? 0) == 0) *@
+    @*             { *@
+    @*                 <div> *@
+    @*                     <p> *@
+    @*                         There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article *@
+    @*                         about setting up this ASP.NET application to support logging in via external services</a>. *@
+    @*                     </p> *@
+    @*                 </div> *@
+    @*             } *@
+    @*             else *@
+    @*             { *@
+    @*                 <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal"> *@
+    @*                     <div> *@
+    @*                         <p> *@
+    @*                             @foreach (var provider in Model.ExternalLogins) *@
+    @*                             { *@
+    @*                                 <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button> *@
+    @*                             } *@
+    @*                         </p> *@
+    @*                     </div> *@
+    @*                 </form> *@
+    @*             } *@
+    @*         } *@
+    @*     </section> *@
+    @* </div> *@
 </div>
+
+@section Scripts {
+   
+}
