--- a/Nuages.Identity.UI/Pages/Shared/LogoHeader.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/LogoHeader.cshtml
@@ -5,9 +5,7 @@
 
   ViewBag.LogoUrl = UIOptions.Value.LogosUrl;
 
-  ViewBag.ShowRegistration = UIOptions.Value.ShowRegistration;
-  ViewBag.RegistrationUrl = UIOptions.Value.RegistrationUrl;
-
+ 
 }
 
 <div class="sm:mx-auto sm:w-full sm:max-w-md">
@@ -17,19 +15,9 @@
     }
     
     <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-      @Localizer["login:title"]
+      @ViewBag.Title
     </h2>
   </div>
-<div class="sm:mx-auto sm:w-full sm:max-w-md">
-  @if (ViewBag.ShowRegistration)
-  {
-    <p class="mt-2 text-center text-sm text-gray-600">
-      @Localizer["or"]
-      <a href="@ViewBag.RegistrationUrl" class="font-medium text-indigo-600 hover:text-indigo-500">
-        @Localizer["register.title"]
-      </a>
-    </p>
-  }
-</div>
+
 
 
