--- a/Nuages.Identity.UI/Pages/Account/EmailNotConfirmed.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/EmailNotConfirmed.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Nuages.Identity.UI.Pages.Account.EmailNotVerified
+@model Nuages.Identity.UI.Pages.Account.EmailNotConfirmed
 @inject IOptions<Nuages.Web.Recaptcha.GoogleRecaptchaOptions> RecaptchaOptions
 
 <div class="min-h-screen bg-gray-100 flex flex-col justify-start py-12 sm:px-6 lg:px-8 " id="app" >
@@ -26,10 +26,10 @@
       
     
       <form class="space-y-4" method="POST" v-on:submit.prevent="login" id="formLogin" v-if="status == ''">
-        <strong>@Localizer["emailNotVerified:title"]</strong>
-        <h4>@Localizer["emailNotVerified:message"]</h4>
+        <strong>@Localizer["emailNotConfirmed:title"]</strong>
+        <h4>@Localizer["emailNotConfirmed:message"]</h4>
         <button v-on:click.prevent="send" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-           @Localizer["emailNotVerified:sendAgain"]
+           @Localizer["emailNotConfirmed:sendAgain"]
          </button>
       </form>
     </div>
@@ -43,5 +43,5 @@
   <script>
   var recaptcha = '@RecaptchaOptions.Value.SiteKey';
   </script>
-  <script src="/js/pages/emailNotVerified.js"></script> 
+  <script src="/js/pages/emailNotConfirmed.js"></script> 
 }
