--- a/Nuages.Identity.UI/Pages/Account/PhoneNotVerified.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/PhoneNotVerified.cshtml
@@ -1,19 +1,4 @@
 @page
 @model Nuages.Identity.UI.Pages.Account.PhoneNotVerified
 
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-<div>
-    
-</div>
-</body>
-</html>
+Phone Not Verified
