--- a/Nuages.Identity.UI/Pages/Shared/_Layout.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_Layout.cshtml
@@ -1,12 +1,10 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - Nuages.Identity.UI</title>
-   
+
     <link rel="stylesheet" href="~/css/site.css"/>
     <link rel="stylesheet" href="~/css/tailwind-output.css"/>
     <script src="https://kit.fontawesome.com/34d2a269b0.js" crossorigin="anonymous"></script>
@@ -17,7 +15,17 @@
     <div class="was-validated"></div>
 </div>
 
-@RenderBody()
+<div class="min-h-screen bg-gray-100 flex flex-col justify-start py-12 sm:px-6 lg:px-8 " id="app">
+
+    <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+        <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+            <partial name="Shared/LogoHeader"/>
+            @RenderSection("Header", false)
+            @RenderBody()
+            @RenderSection("Footer", false)
+        </div>
+    </div>
+</div>
 
 <environment names="Production">
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
@@ -26,6 +34,6 @@
     <script src="https://unpkg.com/vue@3"></script>
 </environment>
 
-@await RenderSectionAsync("Scripts", required: false)
+@await RenderSectionAsync("Scripts", false)
 </body>
 </html>
