--- a/Nuages.Identity.UI/wwwroot/css/tailwind.css
+++ b/Nuages.Identity.UI/wwwroot/css/tailwind.css
@@ -12,5 +12,17 @@
     {
         @apply appearance-none block w-full px-3 py-2 border  border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500;
     }
+    
+    .btn{
+        @apply w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2
+    }
+    .btn-primary
+    {
+        @apply text-white bg-indigo-600 hover:bg-indigo-700  focus:ring-indigo-500
+    }
+    
+    a{
+        @apply font-medium text-indigo-600 hover:text-indigo-500
+    }
 
 }
