--- a/Nuages.Identity.UI/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-@inject  Nuages.Identity.Services.NuagesSignInManager SignInManager
+@using Nuages.Identity.Services.AspNetIdentity
+@inject  NuagesSignInManager SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
