--- a/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
@@ -1,22 +1,35 @@
 ﻿@page
-@model ForgotPasswordModel
+@model Nuages.Identity.UI.Pages.Account.ForgotPasswordModel
+@inject IOptions<Nuages.Web.Recaptcha.GoogleRecaptchaOptions> RecaptchaOptions
+
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = Localizer["forgotPassword:title"];
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
 
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
-        </form>
-    
-@section Scripts {
+<partial name="Shared/ErrorList"/>
+<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="forgotPassword" id="formforgotPassword">
+    <div>
+        <div class="mt-1">
+            <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["email"]" required class="text-box">
+        </div>
+    </div>
+    <div>
+        <button v-on:click.prevent="forgotPassword" class="btn btn-primary">
+            @Localizer["forgotPassword:reset"]
+        </button>
+    </div>
+</form>
+
+<script src="https://www.google.com/recaptcha/api.js?render=@RecaptchaOptions.Value.SiteKey"></script>
+
+@section Scripts
+{
+    <script>
+    var emailRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["email"])";
+    var emailInvalidMessage = "@Localizer["errorMessage:invalidEmail"]";
+    var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+   
+    </script>
+    <script src="/js/pages/forgotPassword.js"></script>
 }
