--- a/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
@@ -8,7 +8,12 @@
 
 
 <partial name="Shared/ErrorList"/>
-<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="forgotPassword" id="formforgotPassword">
+
+<div class="flex justify-center mt-4" v-if="status == 'done'" v-show="status == 'done'" >
+    <span>@Localizer["forgotPassword:seeEmail"]</span>
+</div>
+
+<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="forgotPassword" id="formforgotPassword" v-if="status == ''">
     <div>
         <div class="mt-1">
             <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["email"]" required class="text-box">
