--- a/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
@@ -9,8 +9,14 @@
 
 <partial name="Shared/ErrorList"/>
 
-<div class="flex justify-center mt-4" v-if="status == 'done'" v-show="status == 'done'" >
-    <span>@Localizer["forgotPassword:seeEmail"]</span>
+<div class="flex justify-center mt-4" >
+        
+    <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+    <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+         <i class="fa fa-check-circle text-green-700 fa-3x text-center" ></i>
+        <span class="mt-4">@Localizer["forgotPassword:seeEmail"]</span>
+    </div>
+       
 </div>
 
 <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="forgotPassword" id="formforgotPassword" v-if="status == ''">
