--- a/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
@@ -21,7 +21,11 @@
 
 <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="forgotPassword" id="formforgotPassword" v-if="status == ''">
     <div>
-        <div class="mt-1">
+        <div>
+            <span>@Localizer["forgotPassword:instructions"]</span>
+        </div>
+        <div class="mt-4">
+            
             <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["email"]" required class="text-box">
         </div>
     </div>
@@ -43,4 +47,9 @@
    
     </script>
     <script src="/js/pages/forgotPassword.js"></script>
+}
+
+@section MainFooter
+{
+    <partial name="Shared/BackToLogin"/>
 }
