--- a/Nuages.Identity.UI/Pages/Account/Register.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Register.cshtml
@@ -48,3 +48,8 @@
   </script>
     <script src="/js/pages/register.js"></script>
 }
+
+@section MainFooter
+{
+    <partial name="Shared/BackToLogin"/>
+}
