--- a/Nuages.Identity.UI/Pages/Shared/_Layout.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
             @RenderBody()
             @RenderSection("Footer", false)
         </div>
+         @RenderSection("MainFooter", false)
     </div>
 </div>
 
