--- a/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -1,37 +1,52 @@
 ﻿@page
+@inject IOptions<Nuages.Web.Recaptcha.GoogleRecaptchaOptions> RecaptchaOptions
+
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = Localizer["resetPassword.title"];
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Reset your password.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input asp-for="Input.Code" type="hidden" />
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password" class="form-label"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword" class="form-label"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset</button>
-        </form>
-    </div>
-</div>
+<partial name="Shared/ErrorList"/>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="resetPassword" id="formResetPassword" v-if="status == ''">
+    <div>
+        <div>
+            <span>@Localizer["resetPassword:instructions"]</span>
+        </div>
+        <div class="mt-4">
+            
+            <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["email"]" required class="text-box">
+        </div>
+        <div class="mt-1">
+            <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["resetPassword:password"]" autocomplete="current-password" required class="text-box ">
+        </div>
+        <div class="mt-1">
+            <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["resetPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
+        </div>
+        
+
+    </div>
+    <div>
+        <button v-on:click.prevent="resetPassword" class="btn btn-primary">
+                       @Localizer["resetPassword:reset"]
+                   </button>
+    </div>
+</form>
+
+
+
+<script src="https://www.google.com/recaptcha/api.js?render=@RecaptchaOptions.Value.SiteKey"></script>
+
+@section Scripts
+{
+    <script>
+        var emailRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["email"])";
+        var passwordRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["resetPassword:password"])";
+        var passwordConfirmRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["resetPassword:passwordConfirm"])";
+        var emailInvalidMessage = "@Localizer["errorMessage:invalidEmail"]";
+        var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+        var code = '@ViewData["code"]';
+    </script>
+
+    <script src="/js/pages/resetPassword.js"></script>
 }
