--- a/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -9,33 +9,43 @@
 <partial name="Shared/ErrorList"/>
 
 <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="resetPassword" id="formResetPassword" v-if="status == ''">
-    <div>
+    
         <div>
             <span>@Localizer["resetPassword:instructions"]</span>
         </div>
         <div class="mt-4">
-            
-            <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["email"]" required class="text-box">
+            <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["resetPassword:email"]" required class="text-box" autocomplete="username">
         </div>
-        <div class="mt-1">
-            <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["resetPassword:password"]" autocomplete="current-password" required class="text-box ">
+        <div>
+             <div class="mt-1">
+                <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["resetPassword:password"]" autocomplete="current-password" required class="text-box ">
+            </div>
         </div>
-        <div class="mt-1">
-            <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["resetPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
+        <div>
+             <div class="mt-1">
+                <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["resetPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
+            </div>
         </div>
-        
-
-    </div>
+       
+   
     <div>
         <button v-on:click.prevent="resetPassword" class="btn btn-primary">
-                       @Localizer["resetPassword:reset"]
-                   </button>
+           @Localizer["resetPassword:reset"]
+       </button>
     </div>
 </form>
 
 
+@section MainFooter
+{
+    <partial name="Shared/BackToLogin"/>
+}
 
-<script src="https://www.google.com/recaptcha/api.js?render=@RecaptchaOptions.Value.SiteKey"></script>
+
+@section Header
+{
+    
+}
 
 @section Scripts
 {
