--- a/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -6,32 +6,37 @@
     ViewData["Title"] = Localizer["resetPassword.title"];
 }
 
+<div class="flex justify-center mt-4" >
+    <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+    <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+        <i class="fa fa-check-circle text-green-700 fa-3x text-center" ></i>
+        <span class="mt-4">@Localizer["resetPassword:success"]</span>
+    </div>
+</div>
+
 <partial name="Shared/ErrorList"/>
 
-<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="resetPassword" id="formResetPassword" v-if="status == ''">
-    
-        <div>
-            <span>@Localizer["resetPassword:instructions"]</span>
+<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="resetPassword" id="formResetPassword" v-if="status != 'sending'">
+    <div>
+        <span>@Localizer["resetPassword:instructions"]</span>
+    </div>
+    <div class="mt-4">
+        <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["resetPassword:email"]" required class="text-box" autocomplete="username">
+    </div>
+    <div>
+        <div class="mt-1">
+            <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["resetPassword:password"]" autocomplete="current-password" required class="text-box ">
         </div>
-        <div class="mt-4">
-            <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["resetPassword:email"]" required class="text-box" autocomplete="username">
+    </div>
+    <div>
+        <div class="mt-1">
+            <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["resetPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
         </div>
-        <div>
-             <div class="mt-1">
-                <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["resetPassword:password"]" autocomplete="current-password" required class="text-box ">
-            </div>
-        </div>
-        <div>
-             <div class="mt-1">
-                <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["resetPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
-            </div>
-        </div>
-       
-   
+    </div>
     <div>
         <button v-on:click.prevent="resetPassword" class="btn btn-primary">
-           @Localizer["resetPassword:reset"]
-       </button>
+            @Localizer["resetPassword:reset"]
+        </button>
     </div>
 </form>
 
@@ -39,12 +44,6 @@
 @section MainFooter
 {
     <partial name="Shared/BackToLogin"/>
-}
-
-
-@section Header
-{
-    
 }
 
 @section Scripts
